--- a/topografiya/templates/leader/edit_pdowork.html
+++ b/topografiya/templates/leader/edit_pdowork.html
@@ -32,16 +32,16 @@
                                                                                     <p>{{ pdowork.agreement_date }}</p>
                                                                                 </div>
                                                                                 <div class="mb-2">
-                                                                                    <b>Обект номи<sup
+                                                                                    <b>Объект  номи<sup
                                                                                             style="color: red;">*</sup></b>
                                                                                     <p>{{ pdowork.object_name }} </p>
                                                                                 </div>
                                                                                 <div class="mb-2">
-                                                                                    <b>Буюрмачи</b>
+                                                                                    <b>Буюртмачи</b>
                                                                                     <p>{{ pdowork.customer }}</p>
                                                                                 </div>
                                                                                 <div class="mb-2">
-                                                                                    <b>Обект манзили<sup
+                                                                                    <b>Объект манзили<sup
                                                                                             style="color: red;">*</sup></b>
                                                                                     <p>{{ pdowork.object_address }}</p>
                                                                                 </div>
@@ -53,7 +53,7 @@
                                                                                     <p>{{ pdowork.work_term }} kun</p>
                                                                                 </div>
                                                                                 <div class="mb-2">
-                                                                                    <b>Буюртмачи маълумотлари<sup
+                                                                                    <b>Буюртмачи реквизитлари<sup
                                                                                             style="color: red;">*</sup></b>
                                                                                     <p>{{ pdowork.customer_info }}</p>
                                                                                 </div>
@@ -63,7 +63,7 @@
                                                                                     <p>{{ pdowork.work_type }}</p>
                                                                                 </div>
                                                                                 <div class="mb-2">
-                                                                                    <b>Нархи<sup
+                                                                                    <b>Шартнома суммаси<sup
                                                                                             style="color: red;">*</sup></b>
                                                                                     <p>{{ pdowork.object_cost}}</p>
                                                                                 </div>
@@ -80,8 +80,8 @@
                                                                                         class="fa fa-file-archive-o f-36 txt-warning"></i>
                                                                                     <div class="media-body ">
                                                                                         <h6 class="">
-                                                                                            <a href="/{{ pdowork.latter }}">
-                                                                                                Буюрта хати билан танишиш
+                                                                                            <a href="/{{ pdowork.latter }}" target="_blank">
+                                                                                                Буюртма хати билан танишиш
                                                                                             </a></h6>
                                                                                     </div>
                                                                                 </div>
@@ -91,17 +91,17 @@
                                                                                         class="fa fa-folder f-36 txt-warning"></i>
                                                                                     <div class="media-body ">
                                                                                         <h6 class="">
-                                                                                            <a href="/{{ pdowork.tz }}">Техник топшириқ
-                                                                                            файли билан танишиш</a></h6>
+                                                                                            <a href="/{{ pdowork.tz }}" target="_blank">Техник топшириқ
+                                                                                             билан танишиш</a></h6>
                                                                                     </div>
                                                                                 </div>
                                                                             </li>
                                                                             <li class="folder-box">
                                                                                 <div class="media"><i
-                                                                                        class="fa fa-file-archive-o f-36 txt-warning"></i>
+                                                                                        class="fa fa-file-archive-o f-36 txt-warning" ></i>
                                                                                     <div class="media-body ">
                                                                                         <h6 class="">
-                                                                                            <a href="/{{ pdowork.smeta }}">Смета файли
+                                                                                            <a href="/{{ pdowork.smeta }}" target="_blank">Смета
                                                                                             билан танишиш</a></h6>
                                                                                     </div>
                                                                                 </div>
