--- a/topografiya/templates/leader/pdo_works.html
+++ b/topografiya/templates/leader/pdo_works.html
@@ -39,8 +39,8 @@
                                                 class="blg-date">{{ pdowork.work_term }}</span></div>
 {#                                        <a href="">#}
                                             <h6 class="blog-bottom-details">{{ pdowork.object_name }}</h6>
-                                        <div><b>Ташкилот номи:</b> {{ pdowork.customer_info }}</div>
-                                        <div><b>Келиб тушган вақти:</b> {{ pdowork.agreement_date }}</div>
+                                        <div><b>Буюртмачи номи:</b> {{ pdowork.customer }}</div>
+                                        <div><b>Шартнома тузилган сана:</b> {{ pdowork.agreement_date }}</div>
                                         <div><b>Жойлашган жойи:</b> {{ pdowork.object_address }}</div>
                                         <div class="text-center p-2">
 {#                                            #}
