--- a/topografiya/templates/leader/polevoy/checking_polevoy_works.html
+++ b/topografiya/templates/leader/polevoy/checking_polevoy_works.html
@@ -540,7 +540,7 @@
                                     <hr>
 {#                                    <div class="card">#}
 
-                                    <h4 class="m-t-25 ">Муҳандислик тармоқлари сиёмкаси бўйича дала назорати ва қабул қилиш далолатномаси</h4>
+                                    <h4 class="m-t-25 text-center">AKT полевого контроля и приемки топографических работ</h4>
                                     <div class="row p-r-40">
                                         <div class="col-sm-2 tabs-responsive-side">
                                             <div class="nav flex-column nav-pills border-tab nav-left" id="v-pills-tab"
@@ -599,7 +599,6 @@
 
                                                                                     <h3 class="text-center">АКТ</h3>
                                                                                     <div class="col-md-12">
-                                                                                        <br>
                                                                                         <h5 class="text-center">Полевого
                                                                                             контроля и приемки
                                                                                             топографических
