--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -240,7 +240,7 @@
                                 <ul class="nav-submenu menu-content">
                                     <li><a href="{% url 'allworks' %}">Барча ишлар</a></li>
 {#                                    <li><a href="{% url 'program_works_leader' %}">Топографик-геодезик дастури</a></li>#}
-                                    <li><a href="{% url 'polevoy_works' %}">Дала назорати
+                                    <li><a href="{% url 'polevoy_works' %}">Жорий ишлар
                                         {% if count_works.new_field_works != 0 %}
                                             <span style="float: right" class="badge rounded-pill badge-danger">
                                                      {{ count_works.new_field_works }}
