--- a/topografiya/templates/worker/object_poyasitelniy_form.html
+++ b/topografiya/templates/worker/object_poyasitelniy_form.html
@@ -867,7 +867,7 @@
                                                                                 <th scope="col">Номер пункта и тип закрепления</th>
                                                                                 <th scope="col">Координаты x</th>
                                                                                 <th scope="col">Координаты y</th>
-                                                                                <th scope="col">Высота</th>
+                                                                                <th scope="col">Высота z</th>
                                                                                 <th scope="col"></th>
                                                                             </tr>
                                                                             </thead>
@@ -878,14 +878,14 @@
                                                                                     <input class="border-0 w-100" type="text" value="{{ form2.b9_1 }}" name="b9_1" id="b9_1" placeholder="">
                                                                                 </td>
                                                                                 <td>
-                                                                                    <input class="border-0 w-100" type="text" value="{{ form2.b9_2 }}" name="b9_2" id="b9_2" placeholder="">
+                                                                                    <input class="border-0 w-100" type="number" value="{{ form2.b9_2 }}" name="b9_2" id="b9_2" placeholder="">
                                                                                 </td>
                                                                                 <td>
-                                                                                    <input class="border-0 w-100" type="text" value="{{ form2.b9_3 }}" name="b9_3" id="b9_3" placeholder="">
+                                                                                    <input class="border-0 w-100" type="number" value="{{ form2.b9_3 }}" name="b9_3" id="b9_3" placeholder="">
                                                                                 </td>
 
                                                                                 <td>
-                                                                                    <input class="border-0 w-100" type="text" value="{{ form2.b9_4 }}" name="b9_4" id="b9_4" placeholder="">
+                                                                                    <input class="border-0 w-100" type="number" value="{{ form2.b9_4 }}" name="b9_4" id="b9_4" placeholder="">
                                                                                 </td>
                                                                                 <td><i id="addrow9" onclick="childrentabl7()" class="fa fa-plus-circle f-20 txt-primary"></i></td>
                                                                             </tr>
@@ -894,15 +894,19 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <div class="mb-3 row">
+                                                            <div class="row">
                                                                 <label class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">10</span> Планово-высотное обоснование выполнено</label>
                                                                 <div class="col-sm-9">
-                                                                        <textarea cols="5" class="form-control" type="text" placeholder="методы и точность определения планового положения точек съемочного
-                                                                             обоснования; методы и точность определения высот точек съемочного обоснования,
-                                                                             средняя длина ходов;" name="b10" id="b10">{{ form.b10 }}
-                                                                        </textarea>
+                                                                        <textarea cols="5" class="form-control"  name="b10" id="b10">{{ form.b10 }}</textarea>
                                                                 </div>
                                                             </div>
+                                                            <div class="mb-3 row">
+                                                                <label class="col-sm-3 col-form-label"></label>
+                                                                <div class="col-sm-9">
+                                                                        <p style="font-size: 12px">(методы и точность определения планового положения точек съемочного обоснования; методы и точность определения высот точек съемочного обоснования, средняя длина ходов; наибольшая угловая и линейная невязка; наибольшая относительная ошибка; наибольшая высотная невязка и ее допуск)</p>
+                                                                </div>
+                                                            </div>
+
                                                             <div class="mb-3 row">
                                                                 <label class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">11</span> Пункты съемочного обоснования закреплены</label>
                                                                 <div class="col-sm-9">
@@ -912,11 +916,8 @@
                                                             <div class="mb-3 row">
                                                                 <label class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">12</span> Постоянные геодезические знаки сданы по акту на наблюдение за сохранностью представителю</label>
                                                                 <div class="col-sm-9">
-                                                                         <textarea
-                                                                           class="form-control"
-                                                                           type="text" name="b12" id="b12"
-                                                                           placeholder="должность, фамилия, имя, отчество представителя заказчика">{{ form.b12 }}
-                                                                           </textarea>
+                                                                         <textarea class="form-control" cols="5" name="b12" id="b12">{{ form.b12 }}</textarea>
+                                                                                                                                                                                                                                                                                                                                                                                            <p style="font-size: 1````````````2````````````px">(должность, фамилия, имя, отчество представителя заказчика)</p>
                                                                 </div>
                                                             </div>
                                                             <div class="mb-3 row">
@@ -1226,74 +1227,70 @@
                                         <div class="col-xs-12">
                                             <h5>Инженерные подземные сети представлены:</h5>
                                             <div class="mb-3 row">
-                                                <label class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">1</span> Работа выполнена исполнителем</label>
+                                                <label class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">1</span> Напорные трубопроводы:</label>
                                                 <div class="col-sm-9">
-                                                    <input class="form-control" type="text" name="d_1" id="d_1" value="{{ form.d_1 }}" placeholder="перечислить: газопровод, водопровод, теплотрасса, напорная канализация т.д">
+                                                    <input class="form-control" type="text" name="d_1" id="d_1" value="{{ form.d_1 }}" placeholder="перечислить: газопровод, водопровод, теплотрасса, напорная канализация и т.д">
                                                 </div>
                                             </div>
                                             <div class="mb-3 row">
                                                 <label class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">2</span> Самотечные трубопроводы:</label>
                                                 <div class="col-sm-9">
-                                                    <textarea class="form-control" type="text" name="d_2" id="d_2" placeholder="перечислить: дренаж, фекальная канализация, ливневая канализация,">{{ form.d_2 }}</textarea>
+                                                    <textarea class="form-control" type="text" name="d_2" id="d_2" placeholder="перечислить: дренаж, фекальная канализация, ливневая канализация и т.д">{{ form.d_2 }}</textarea>
                                                 </div>
                                             </div>
                                             <div class="mb-3 row">
-                                                <label class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">3</span> Кабельныелинии:</label>
+                                                <label class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">3</span> Кабельные линии:</label>
                                                 <div class="col-sm-9">
-                                                    <textarea class="form-control" type="text" name="d_3" id="d_3" placeholder="перечислить: в/в эл. кабели, н/в эл. кабели, связь,сигнализация и т.д">{{ form.d_3 }}</textarea>
+                                                    <textarea class="form-control" type="text" name="d_3" id="d_3" placeholder="перечислить: в/в эл. кабели, н/в эл. кабели, связь, сигнализация и т.д">{{ form.d_3 }}</textarea>
                                                 </div>
                                             </div>
                                             <p>
                                                 Неметаллические трубопроводы и резервные кабели
-                                                <span><input style="border:1px solid #e6e8eb" type="text" name="d_4" class="w-25" id="d_4" value="{{ form.d_4 }}" placeholder="перечислить: какие)"></span>
-                                                на планшета
-                                                <span><input style="border:1px solid #e6e8eb" type="text" name="d_5" id="d_5" value="{{ form.d_5 }}" class="w-50 m-b-10 m-t-10" placeholder="указать номенклатуру"></span>
-                                                нанесены по неуточнённым данным
-                                                <span><input style="border:1px solid #e6e8eb" type="text" name="d_6" id="d_6" class="w-75" value="{{ form.d_6 }}" placeholder="эксплуатирующих организаций,опроса населения и т. д.)"></span>
+                                                <span><input style="border:1px solid #e6e8eb;width: 65%" type="text" name="d_4" class="w-65" id="d_4" value="{{ form.d_4 }}" placeholder="перечислить: какие)"></span>
+                                                <br>на планшета
+                                                <span><input style="border:1px solid #e6e8eb;width: 65%"" type="text" name="d_5" id="d_5" value="{{ form.d_5 }}" class="w-65 m-b-10 m-t-10" placeholder="указать номенклатуру"></span>
+                                                <br>нанесены по неуточнённым данным
+                                                <span><input style="border:1px solid #e6e8eb;width: 65%"" type="text" name="d_6" id="d_6" class="w-65" value="{{ form.d_6 }}" placeholder="эксплуатирующих организаций,опроса населения и т. д.)"></span>
                                             </p>
                                             <div class="mb-3 row">
-                                                <label class="col-sm-3 col-form-label">Обследование и нивелирование колодцев производилось с использование</label>
+                                                <label class="col-sm-3 col-form-label">Обследование и нивелирование колодцев производилось с использование <sup class="text-danger" style="font-size: 14px">*</sup></label>
                                                 <div class="col-sm-9">
                                                     <textarea class="form-control" name="d_7" id="d_7" type="text" placeholder="нивелир, рейка, рулетка, штанга и т. д">{{ form.d_7 }}</textarea>
                                                 </div>
                                             </div>
                                             <div class="mb-3 row">
-                                                <label class="col-sm-3 col-form-label">Прослушивание ИПК выполнялось с применение трубокабелеискателей</label>
+                                                <label class="col-sm-3 col-form-label">Прослушивание ИПК выполнялось с применение трубокабелеискателей <sup class="text-danger" style="font-size: 14px">*</sup></label>
                                                 <div class="col-sm-9">
                                                     <textarea class="form-control" name="d_8" id="d_8" type="text" placeholder="указать марку">{{ form.d_8 }}</textarea>
                                                 </div>
                                             </div>
                                             <div class="mb-3 row">
-                                                <label class="col-sm-3 col-form-label">Привязка точек прослушивания и съёмка выходов ИПК производилась</label>
+                                                <label class="col-sm-3 col-form-label">Привязка точек прослушивания и съёмка выходов ИПК производилась <sup class="text-danger" style="font-size: 14px">*</sup></label>
                                                 <div class="col-sm-9">
                                                     <textarea class="form-control" type="text" name="d_9" id="d_9" placeholder="указать от чего, метод, инструменты">{{ form.d_9 }}</textarea>
                                                 </div>
                                             </div>
                                             <p>
                                                 Все выявленные подземные коммуникации нанесены на топографический план в масштабе 1:
-                                                <span><input style="border:1px solid #e6e8eb;" type="text" class="" name="d_10" id="d_10" placeholder="" value="{{ form.d_10 }}"></span>
+                                                <span><input style="border:1px solid #e6e8eb;" type="number" class="" name="d_10" id="d_10" placeholder="" value="{{ form.d_10 }}"></span>
                                                 и принятых условных знаках.
                                             </p>
                                             <div class="mb-3 row">
                                                 <label class="col-sm-3 col-form-label">Выполненные работы по выявлению подземных коммуникаций проконтролированы и приняты</label>
                                                 <div class="col-sm-9">
-                                                    <textarea name="d_11" id="d_11"
-                                                            style="height: 100px;"
-                                                            class="form-control"
-                                                            type="text"
-                                                            placeholder="должность, фамилия, имя, отчество,
-                                                            число, оценка качества работ">{{ form.d_11 }}
-                                                    </textarea>
+                                                    <textarea name="d_11" id="d_11" style="height: 100px;" class="form-control">{{ form.d_11 }}</textarea>
+                                                    <p style="font-size: 12px">должность, фамилия, имя, отчество,
+                                                            число, оценка качества работ</p>
                                                 </div>
                                             </div>
                                             <div class="mb-3 row">
-                                                <label class="col-sm-3 col-form-label">Записку составил</label>
+                                                <label class="col-sm-3 col-form-label">Записку составил <sup class="text-danger" style="font-size: 14px">*</sup></label>
                                                 <div class="col-sm-9">
                                                     <input class="form-control" type="text" name="d_12" id="d_12" value="{{ form.d_12 }}" placeholder="число, подпись, должность, фамилия, имя, отчество">
                                                 </div>
                                             </div>
                                             <div class="mb-3 row">
-                                                <label class="col-sm-3 col-form-label">Контроль и приемка работ</label>
+                                                <label class="col-sm-3 col-form-label">Контроль и приемка работ <sup class="text-danger" style="font-size: 14px">*</sup></label>
                                                 <div class="col-sm-9">
                                                     <input class="form-control" name="d_13" id="d_13" type="text" value="{{ form.d_13 }}" placeholder="должность, Ф.И.О. проверяющего, дата проведения контроля и приемки, оценка работ">
                                                 </div>
