--- a/topografiya/templates/worker/polevoy_work_doing.html
+++ b/topografiya/templates/worker/polevoy_work_doing.html
@@ -726,7 +726,7 @@
                         <div class="ribbon-wrapper card shadow">
                             <div class="card-body">
                                 <div class="ribbon ribbon-clip ribbon-primary">1</div>
-                                <h5>Скрыть изм-ные данные</h5>
+                                <h5>Сырые измерительные данные</h5>
                                 <button class="btn btn-outline-primary w-100" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">Файл юклаш</button>
                              </div>
                         </div>
@@ -844,6 +844,7 @@
                         <div class="ribbon-wrapper card shadow">
                             <div class="card-body">
                                 <div class="ribbon ribbon-clip ribbon-primary">7</div>
+                                     <h5 style="margin-top: -25px">Укажите месторасположение объекта на карте<sup class="txt-danger">*</sup></h5>
 {#                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95942.65769716408!2d69.20932726033043!3d41.282576225565485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b0cc379e9c3%3A0xa5a9323b4aa5cb98!2z0KLQsNGI0LrQtdC90YIsINCj0LfQsdC10LrQuNGB0YLQsNC9!5e0!3m2!1sru!2s!4v1642709720963!5m2!1sru!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>#}
                             <div id="map"></div>
                                 <br>
@@ -981,7 +982,7 @@
         data.append("vidimes", $('#vidimes')[0].files[0]);
         data.append("list", $('#list')[0].files[0]);
         event.preventDefault();
-        if(drawnItems.toGeoJSON().features.length==1){
+
         if($('#vidimes').attr('vidimes-id') == '1' && $('#list').attr('list-id') == '1' && $('#jurnal').attr('jurnal-id') == '1' && $('#kroki').attr('kroki-id') == '1' && $('#abris').attr('abris-id') == '1'){
         $.ajax({
            type: 'POST',
@@ -1001,11 +1002,9 @@
         });
         }
         else{
-            alert('Iltimos maydonlarni toldirishingizni soraymiz');}
+            alert('Iltimos maydonlarni toldirishingizni soraymiz');
             }
-        else{
-            alert("Vektorli ma'lumot yo'q");
-        }
+
     });
 </script>
 <script type="text/javascript">
